--- a/yaml/web.yaml
+++ b/yaml/web.yaml
@@ -1,13 +1,14 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: nginx
+  name: web
   labels:
     app: nginx
 spec:
   containers:
     - name: nginx
       image: nginx:latest
+
       resources:
         requests:
           cpu: "100m"
@@ -19,7 +20,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx
+  name: web
 spec:
   ports:
     - port: 80
